--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">XPrivacy</string>
     <string name="app_notxposed" formatted="false">Xposed framework version %d+ nie jest zainstalowany</string>
     <string name="app_notenabled">XPrivacy nie został włączony w instalatorze Xposed</string>
-    <string name="app_wrongandroid">Testowane tylko z Androidem w wersji 4.0, 4.1 and 4.2</string>
+    <string name="app_wrongandroid">Testowane tylko z Androidem w wersji 4.0, 4.1 oraz 4.2</string>
     <string name="app_version" formatted="false">Wersja XPrivacy: %s (%d)</string>
     <string name="app_xversion" formatted="false">Wersja Xposed framework: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
@@ -23,7 +23,7 @@
     <string name="msg_noupdate">Brak aktualizacji</string>
     <string name="msg_restricted" formatted="false">%s jest ograniczone przez XPrivacy</string>
     <string name="msg_licensed" formatted="false">Licencjonowane dla: %s</string>
-    <string name="msg_loading">Loading</string>
+    <string name="msg_loading">Ładowanie</string>
     <string name="msg_done">Gotowe</string>
     <string name="restrict_accounts">Konta (Google, Facebook, etc)</string>
     <string name="restrict_browser">Przeglądarka (zakładki/historia)</string>
@@ -50,7 +50,7 @@
     <string name="settings_mac">Adres MAC</string>
     <string name="settings_phone">Numer telefonu</string>
     <string name="settings_id">Android ID</string>
-    <string name="settings_country">Country</string>
+    <string name="settings_country">Kraj</string>
     <string name="help_application">Aplikacja</string>
     <string name="help_internet">posiada dostęp do internetu</string>
     <string name="help_granted">posiada dostęp do uprawnień Androida</string>
