--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -51,6 +51,7 @@
     <string name="settings_phone">Numéro de téléphone</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Country</string>
+    <string name="settings_fpermission">Filter by permission</string>
     <string name="help_application">Application</string>
     <string name="help_internet">a les permissions Internet</string>
     <string name="help_granted">a les permissions Android</string>
