--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -51,6 +51,7 @@
     <string name="settings_phone">Numero di Telefono</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Nazione</string>
+    <string name="settings_fpermission">Filter by permission</string>
     <string name="help_application">Applicazione</string>
     <string name="help_internet">ha permesso internet</string>
     <string name="help_granted">ha permesso Android</string>
