--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -51,6 +51,7 @@
     <string name="settings_phone">Telefoonnummer</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Land</string>
+    <string name="settings_fpermission">Filter op rechten</string>
     <string name="help_application">Applicatie</string>
     <string name="help_internet">heeft internet rechten</string>
     <string name="help_granted">heeft Android rechten</string>
