--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -51,6 +51,7 @@
     <string name="settings_phone">Telefonska številka</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Država</string>
+    <string name="settings_fpermission">Filter by permission</string>
     <string name="help_application">Program</string>
     <string name="help_internet">uporablja internetne pravice</string>
     <string name="help_granted">uporablja Android pravice</string>
