--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -44,14 +44,15 @@
     <string name="restrict_view">Ver (navegador)</string>
     <string name="title_category">Categoría a restringir:</string>
     <string name="title_restrict">Selecciona para restringir:</string>
-    <string name="settings_expert">Modo experto</string>
     <string name="settings_lat">Latitud</string>
     <string name="settings_lon">Longitud</string>
     <string name="settings_mac">Dirección MAC</string>
     <string name="settings_phone">Phone number</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Country</string>
+    <string name="settings_subscriber">Subscriber ID</string>
     <string name="settings_fpermission">Filter by permission</string>
+    <string name="settings_expert">Modo experto</string>
     <string name="help_application">Aplicación</string>
     <string name="help_internet">tiene permisos para Internet</string>
     <string name="help_granted">tiene permisos por Android</string>
