--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -44,14 +44,15 @@
     <string name="restrict_view">Εμφάνιση (browser)</string>
     <string name="title_category">Κατηγορία για περιορισμό:</string>
     <string name="title_restrict">Επιλέξτε για περιορισμό:</string>
-    <string name="settings_expert">Για προχωρημένους</string>
     <string name="settings_lat">Γεωγρ. πλάτος</string>
     <string name="settings_lon">Γεωγρ. μήκος</string>
     <string name="settings_mac">MAC address</string>
     <string name="settings_phone">Phone number</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Country</string>
+    <string name="settings_subscriber">Subscriber ID</string>
     <string name="settings_fpermission">Filter by permission</string>
+    <string name="settings_expert">Για προχωρημένους</string>
     <string name="help_application">Εφαρμογή</string>
     <string name="help_internet">έχει άδεια internet</string>
     <string name="help_granted">έχει άδεια Android</string>
