--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -44,14 +44,15 @@
     <string name="restrict_view">Vue (navigateur)</string>
     <string name="title_category">Catégorie à restreindre:</string>
     <string name="title_restrict">Vérifier les restrictions:</string>
-    <string name="settings_expert">Mode expert</string>
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
     <string name="settings_mac">adresse MAC</string>
     <string name="settings_phone">Numéro de téléphone</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Country</string>
+    <string name="settings_subscriber">Subscriber ID</string>
     <string name="settings_fpermission">Filter by permission</string>
+    <string name="settings_expert">Mode expert</string>
     <string name="help_application">Application</string>
     <string name="help_internet">a les permissions Internet</string>
     <string name="help_granted">a les permissions Android</string>
