--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -44,14 +44,15 @@
     <string name="restrict_view">Tonen (browser)</string>
     <string name="title_category">Te beperken categorie:</string>
     <string name="title_restrict">Vink om te beperken:</string>
-    <string name="settings_expert">Expert modus</string>
     <string name="settings_lat">Breedte</string>
     <string name="settings_lon">Lengte</string>
     <string name="settings_mac">MAC adres</string>
     <string name="settings_phone">Telefoonnummer</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Land</string>
+    <string name="settings_subscriber">Abonnee ID</string>
     <string name="settings_fpermission">Filter op rechten</string>
+    <string name="settings_expert">Expert modus</string>
     <string name="help_application">Applicatie</string>
     <string name="help_internet">heeft internet rechten</string>
     <string name="help_granted">heeft Android rechten</string>
