--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -44,14 +44,15 @@
     <string name="restrict_view">Просмотр (браузер)</string>
     <string name="title_category">Зпретить категорию:</string>
     <string name="title_restrict">Отметьте приложения:</string>
-    <string name="settings_expert">Расширенный режим</string>
     <string name="settings_lat">Широта</string>
     <string name="settings_lon">Долгота</string>
     <string name="settings_mac">MAC-адрес</string>
     <string name="settings_phone">Номер телефона</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Country</string>
+    <string name="settings_subscriber">Subscriber ID</string>
     <string name="settings_fpermission">Filter by permission</string>
+    <string name="settings_expert">Расширенный режим</string>
     <string name="help_application">Приложение</string>
     <string name="help_internet">запрашивает доступ в интернет</string>
     <string name="help_granted">имеет разрешение Android</string>
