--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -44,14 +44,15 @@
     <string name="restrict_view">Pogled (brskalnik)</string>
     <string name="title_category">Kategorije za omejitev:</string>
     <string name="title_restrict">Označi za omejitev pravic:</string>
-    <string name="settings_expert">Napredni način</string>
     <string name="settings_lat">Geografska širina</string>
     <string name="settings_lon">Geografska dolžina</string>
     <string name="settings_mac">MAC naslov</string>
     <string name="settings_phone">Telefonska številka</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Država</string>
+    <string name="settings_subscriber">Subscriber ID</string>
     <string name="settings_fpermission">Filter by permission</string>
+    <string name="settings_expert">Napredni način</string>
     <string name="help_application">Program</string>
     <string name="help_internet">uporablja internetne pravice</string>
     <string name="help_granted">uporablja Android pravice</string>
