--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -44,14 +44,15 @@
     <string name="restrict_view">Göster (tarayıcı)</string>
     <string name="title_category">Engellenecek kategori:</string>
     <string name="title_restrict">Engellemek için işaretle:</string>
-    <string name="settings_expert">Uzman modu</string>
     <string name="settings_lat">Enlem</string>
     <string name="settings_lon">Boylam</string>
     <string name="settings_mac">MAC adresi</string>
     <string name="settings_phone">Telefon numarası</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Country</string>
+    <string name="settings_subscriber">Subscriber ID</string>
     <string name="settings_fpermission">Filter by permission</string>
+    <string name="settings_expert">Uzman modu</string>
     <string name="help_application">Uygulama</string>
     <string name="help_internet">internet izni var</string>
     <string name="help_granted">Android izni var</string>
