--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -22,7 +22,7 @@
     <string name="menu_app_store">Play Store</string>
     <string name="msg_noupdate">Nincs elérhető frissítés</string>
     <string name="msg_restricted" formatted="false">%s korlátozva az XPrivacy által</string>
-    <string name="msg_licensed" formatted="false">Engedélyezett a: %s</string>
+    <string name="msg_licensed" formatted="false">Licensz tulajdonos: %s</string>
     <string name="msg_loading">Töltés</string>
     <string name="msg_done">Kész</string>
     <string name="restrict_accounts">Fiókok (Google, Facebook, stb.)</string>
@@ -50,8 +50,8 @@
     <string name="settings_phone">Telefonszám</string>
     <string name="settings_id">Android azonosító</string>
     <string name="settings_country">Ország</string>
-    <string name="settings_subscriber">Subscriber ID</string>
-    <string name="settings_fpermission">Filter by permission</string>
+    <string name="settings_subscriber">Előfizető azonosító</string>
+    <string name="settings_fpermission">Szűrés engedély szerint</string>
     <string name="settings_expert">Szakértői mód</string>
     <string name="help_application">Alkalmazás</string>
     <string name="help_internet">Internet engedély</string>
