--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -50,8 +50,8 @@
     <string name="settings_phone">Telefónne číslo</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Krajina</string>
-    <string name="settings_subscriber">Subscriber ID</string>
-    <string name="settings_fpermission">Filter by permission</string>
+    <string name="settings_subscriber">IMSI</string>
+    <string name="settings_fpermission">Filtrovať podľa povolenia</string>
     <string name="settings_expert">Režim experta</string>
     <string name="help_application">Aplikácia</string>
     <string name="help_internet">má internetové oprávnenie</string>
