--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -49,9 +49,9 @@
     <string name="settings_mac">MAC adresa</string>
     <string name="settings_phone">Telefonní číslo</string>
     <string name="settings_id">Android ID</string>
-    <string name="settings_country">Country</string>
-    <string name="settings_subscriber">Subscriber ID</string>
-    <string name="settings_fpermission">Filter by permission</string>
+    <string name="settings_country">Země</string>
+    <string name="settings_subscriber">Subscriber ID (IMSI)</string>
+    <string name="settings_fpermission">Filtrovat dle oprávnění</string>
     <string name="settings_expert">Režim Experta</string>
     <string name="help_application">Aplikace</string>
     <string name="help_internet">má oprávnění k Internetu</string>
