--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -50,8 +50,8 @@
     <string name="settings_phone">Telefonska številka</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Država</string>
-    <string name="settings_subscriber">Subscriber ID</string>
-    <string name="settings_fpermission">Filter by permission</string>
+    <string name="settings_subscriber">ID naročnika</string>
+    <string name="settings_fpermission">Filtriraj po pravicah</string>
     <string name="settings_expert">Napredni način</string>
     <string name="help_application">Program</string>
     <string name="help_internet">uporablja internetne pravice</string>
