--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -49,9 +49,9 @@
     <string name="settings_mac">MAC アドレス</string>
     <string name="settings_phone">電話番号</string>
     <string name="settings_id">Android ID</string>
-    <string name="settings_country">Country</string>
-    <string name="settings_subscriber">Subscriber ID</string>
-    <string name="settings_fpermission">Filter by permission</string>
+    <string name="settings_country">国</string>
+    <string name="settings_subscriber">契約者固有ID</string>
+    <string name="settings_fpermission">権限でフィルタ</string>
     <string name="settings_expert">上級者向けモード</string>
     <string name="help_application">アプリ</string>
     <string name="help_internet">はインターネット権限を持っています</string>
