Updated Arabic translation

--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -31,7 +31,7 @@
     <string name="restrict_calling">المكالمات (الهاتف,الرسائل النصية,رسائل الوسائط)</string>
     <string name="restrict_contacts">الأسماء</string>
     <string name="restrict_dictionary">القاموس (المستخدم)</string>
-    <string name="restrict_identification">المعرف (الجهاز)</string>
+    <string name="restrict_identification">الهوية (الجهاز)</string>
     <string name="restrict_internet">الإنترنت</string>
     <string name="restrict_location">تحديد الموقع (ناعم,خشن)</string>
     <string name="restrict_media">الميديا (صوت,صورة,فيديو) </string>
@@ -44,15 +44,15 @@
     <string name="restrict_view">تصفح (المتصفح)</string>
     <string name="title_category">إختر الصنف للتقيد:</string>
     <string name="title_restrict">إختر للتقيد:</string>
-    <string name="settings_expert">وضع الخبير</string>
+    <string name="settings_expert">الوضع المتقدمz</string>
     <string name="settings_lat">خط العرض</string>
     <string name="settings_lon">خط الطول</string>
     <string name="settings_mac">عنوان الماك</string>
     <string name="settings_phone">رقم الهاتف</string>
-    <string name="settings_id">معرف الأندرويد</string>
-    <string name="settings_country">Country</string>
-    <string name="settings_subscriber">Subscriber ID</string>
-    <string name="settings_fpermission">Filter by permission</string>
+    <string name="settings_id">معرف اندرويد</string>
+    <string name="settings_country">الدولة</string>
+    <string name="settings_subscriber">IMSI</string>
+    <string name="settings_fpermission">تصفية بواسطة الأُذونات</string>
     <string name="help_application">التطبيق</string>
     <string name="help_internet">لديه صلاحية الوصول للإنترنت</string>
     <string name="help_granted">لديه صلاحية أندرويد</string>
