Updated Arabic translation

--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -44,7 +44,7 @@
     <string name="restrict_view">تصفح (المتصفح)</string>
     <string name="title_category">إختر الصنف للتقيد:</string>
     <string name="title_restrict">إختر للتقيد:</string>
-    <string name="settings_expert">الوضع المتقدمz</string>
+    <string name="settings_expert">الوضع المتقدم</string>
     <string name="settings_lat">خط العرض</string>
     <string name="settings_lon">خط الطول</string>
     <string name="settings_mac">عنوان الماك</string>
